✨ 新增会员管理系统和安全增强功能
🎯 主要功能:
- 新增完整的会员管理系统，支持月卡/年卡自动设置
- 添加手动自定义会员开始时间功能
- 实现会员状态显示和剩余天数计算

🔒 安全改进:
- 修复XSS漏洞，添加HTML内容安全过滤
- 实施严格的CSP安全策略
- 增强输入验证，防止注入攻击
- 年龄验证范围调整为3-120岁

🚀 技术增强:
- 新增会员相关API接口和数据转换器
- 完善TypeScript类型定义
- 优化用户界面和交互体验
- 添加智能会员设置逻辑

--- a/settings.local.json
+++ b/settings.local.json
@@ -1,4 +1,7 @@
 {
+  "cleanupPeriodDays": 30,
+  "env": {},
+  "includeCoAuthoredBy": false,
   "permissions": {
     "additionalDirectories": [
       "/data/data/com.termux/files/home/qmx_backend_lib"
